--- a/application/.env.example
+++ b/application/.env.example
@@ -12,11 +12,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=stock
-DB_USERNAME=root
-DB_PASSWORD=root
-# DB_DATABASE=stock
-# DB_USERNAME=stockuser
-# DB_PASSWORD=stockpass
+DB_USERNAME=stockuser
+DB_PASSWORD=stockpass
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
